_sass/_publications.scss
/*******************************************************************************
 * Publication and bibliography styles
 ******************************************************************************/

@use "variables" as v;

.publications {
  margin-top: 2rem;

  h1 {
    color: var(--global-theme-color);
    font-size: 2rem;
    text-align: center;
    margin-top: 1em;
    margin-bottom: 1em;
  }

  h2 {
    margin-bottom: 1rem;

    span {
      font-size: 1.5rem;
    }
  }

  h2.bibliography {
    color: var(--global-divider-color);
    border-top: 1px solid var(--global-divider-color);
    padding-top: 1rem;
    margin-top: 2rem;
    text-align: right;
  }

  ol.bibliography {
    list-style: none;
    padding: 0;
    margin-top: 0;

    li {
      margin-bottom: 1rem;

      .publication-entry {
        align-items: stretch;
      }

      .preview {
        display: inline-block;
        width: 100%;
        border-radius: 0.5rem;
        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.12);
      }

      .abbr {
        margin-bottom: 0;
        height: 100%;
        display: flex;
        flex-direction: column;

        abbr {
          flex: 0 0 auto; // Badges take their natural height
          margin-bottom: 0.5rem;
        }

        .preview-frame {
          width: 100%;
          flex: 1 1 auto; // Grow to fill the remaining space in the column
          position: relative;
          overflow: hidden; // Crop any spillover
          border-radius: 0.5rem;
          margin-bottom: 0;
        }

        .preview-frame figure {
          width: 100%;
          height: 100%;
          margin: 0;
          display: block; // Changed from flex
        }

        .preview-frame picture {
          width: 100%;
          height: 100%;
          display: block;
        }

        img.preview {
          width: 100%;
          height: 100%;
          object-fit: contain !important; // Scale without cropping
          object-position: center center;
          display: block;
          position: absolute; // Take out of flow to prevent pushing height
          top: 0;
          right: 0;
          bottom: 0;
          left: 0;
          background-color: var(--global-card-bg-color);
        }

        abbr {
          display: inline-block;
          background-color: var(--global-theme-color);
          margin-bottom: 0.5rem;
          color: var(--global-card-bg-color) !important;

          a {
            color: white;

            &:hover {
              text-decoration: none;
            }
          }
        }

        .award {
          color: var(--global-theme-color) !important;
          border: 1px solid var(--global-theme-color);
        }
      }

      .title {
        font-weight: bolder;
        font-size: 1.3rem;
        margin-bottom: 0.3rem;
      }

      .author {
        font-size: 0.95rem;
        margin-bottom: 0.2rem;

        .self-author {
          font-style: italic;
          font-weight: 700;
          border-bottom: none;
          text-decoration: none;
        }

        a {
          border-bottom: 1px dashed var(--global-theme-color);

          &:hover {
            border-bottom-style: solid;
            text-decoration: none;
          }
        }

        > em {
          border-bottom: 1px solid;
          font-style: normal;
        }

        > span.more-authors {
          color: var(--global-text-color-light);
          border-bottom: 1px dashed var(--global-text-color-light);
          cursor: pointer;

          &:hover {
            color: var(--global-text-color);
            border-bottom: 1px dashed var(--global-text-color);
          }
        }
      }

      .links {
        a.btn {
          color: var(--global-text-color);
          border: 1px solid var(--global-text-color);
          padding-left: 1rem;
          padding-right: 1rem;
          padding-top: 0.25rem;
          padding-bottom: 0.25rem;
          margin-left: 0;

          &:hover {
            color: var(--global-theme-color);
            border-color: var(--global-theme-color);
          }
        }
        a.award.btn {
          border-color: var(--global-highlight-color);
        }
      }

      .badges {
        padding-bottom: 0.5rem;
        span {
          display: inline-block;
          color: v.$black-color;
          height: 100%;
          padding-right: 0.5rem;
          vertical-align: middle;

          &:hover {
            text-decoration: underline;
          }
        }
      }

      .hidden {
        font-size: 0.875rem;
        max-height: 0px;
        overflow: hidden;
        text-align: justify;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;

        p {
          line-height: 1.4em;
          margin: 10px;
        }

        pre {
          font-size: 1em;
          line-height: 1.4em;
          padding: 10px;
        }
      }

      .hidden.open {
        max-height: 100em;
        transition-property: 0.15s ease;
        -moz-transition: 0.15s ease;
        -ms-transition: 0.15s ease;
        -o-transition: 0.15s ease;
        transition: all 0.15s ease;
      }

      div.abstract.hidden {
        border: dashed 1px var(--global-bg-color);
      }

      div.abstract.hidden.open {
        border-color: var(--global-text-color);
      }
    }
    div.award.hidden {
      border: dashed 1px var(--global-bg-color);
    }
    div.award.hidden.open {
      border-color: var(--global-highlight-color);
    }
  }
}

.citation,
.citation-number {
  color: var(--global-theme-color);
}

